<resources>
    <string name="app_name">KOF</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="telepon">Phone</string>
    <string name="telepon_laboratory">Laboratory Phone</string>
    <string name="email">Email</string>
    <string name="email_laboratory">Laboratory Email</string>

    <string name="medical_checkup">Medical Check Up Appointment</string>

    <string name="ika_name">Ika Kurniawati</string>
    <string name="ika_phone">085321230866</string>
    <string name="ika_email">ikakurniawati_x6@yahoo.com</string>

    <string name="jumlah_contact">2</string>

    <string name="search">Search</string>
    <string name="listbluetooth">List Bluetooth</string>
    <string name="status_blute">Bluetooth Status</string>
    <string name="tap_search">Tap search button to find Bluetooth device</string>
    <string name="tap_connect">Tap bluetooth list to connect</string>
    <string name="available_device">Available device</string>
    <string name="paired_device">Paired device</string>
    <string name="warning_blute">Your bluetooth is off. Please switch on your bluetooth.</string>
    <string name="please_blute">Please switch on your bluetooth</string>
    <string name="sum_press">Count</string>
    <string name="day">Day</string>

    <string name="notif_message1">Your filter is over used !</string>
    <string name="notif_message2">Please change your filter</string>

    <string name="freq_today">Frequency Today</string>
    <string name="freq_highest">Highest Frequency</string>
    <string name="total_count">Total Count : 161</string>

    <!-- WARNATEKS -->
    <color name="warnateksjudul">#555555</color>
    <color name="warnatekssubjudul">#777777</color>

    <string name="detil_webview">Detil Webview</string>
    <string name="detil_artikel">Article</string>
    <string name="about_page">About Page</string>

    <string name="action_bagikan">Share Article</string>
    <string name="action_segarkan">Refresh Data</string>
    <string name="action_done">Done</string>

    <!--message-->
    <string name="error_message_title">Application cannot execute process</string>
    <string name="error_message_subtitle">Please check date on your phone</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="reset_filter_message">Reset Filter Counter</string>
    <string name="reset_filter_message1">This process will delete your filter counter. Total count will set to zero (0).
                                        Don\'t worry this process will not erase your graphic data.</string>
    <string name="this_app">com.ika.kof.killerofflue</string>
    <string name="filter_resetted">Your filter has been reset</string>

    <!--about-->
    <string name="versi">Version 1.0</string>
    <string name="aplikasi_ini_didesain">This application designed and coded by :</string>
    <string name="kof_contact">Killer of Flu can be contacted through :</string>
    <string name="kof_standfor">KOF stands for Killer of Flu. This app is a project from Ika Kurniawati to help
                                people suffer from flu.</string>
    <string name="copyright_kof">Copyright \u00A9 2017 KOF</string>
    <string name="all_right_reserved">All rights reserved</string>
    <string name="credit">Credit Picture</string>

    <!--setting-->
    <string name="setting">Setting</string>
    <string name="reset_filter">Reset Filter :</string>
    <string name="reset_button">Reset</string>

    <string name="ghifar1">Farhan Ghifari</string>
    <string name="ghifari2">IG : alhudaghifari</string>
    <string name="ghifari3">alhudaghifari@gmail.com</string>

    <string name="faisall"> faisaaall </string>

    <!--credit-->
    <string name="graph">Graph Icon :</string>
    <string name="news">News Icon :</string>
    <string name="bluetot">Bluetooth Icon :</string>
    <string name="credit_graph"><div>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
    <string name="credit_news"><div>Icons made by <a href="https://www.flaticon.com/authors/picol" title="Picol">Picol</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
    <string name="credit_bluetooth2"><div>Icons made by <a href="https://www.flaticon.com/authors/sherzod-mirzaakhmedov" title="Sherzod Mirzaakhmedov">Sherzod Mirzaakhmedov</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div></string>
</resources>
