<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueskyNom">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/kof_big_logo"/>

                <TextView
                    android:layout_marginTop="@dimen/margin_top_2"
                    android:layout_marginRight="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kof_standfor"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/versi"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright_kof"
                android:gravity="center"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_right_reserved"
                android:gravity="center"
                android:textStyle="normal"/>



            <View
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/ukuran_10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/pink" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kof_contact"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="bold"/>


            <ImageView
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/ukuran_10dp"
                android:src="@drawable/clock"/>

            <TextView
                android:layout_marginTop="@dimen/margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ika_name"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ika_phone"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ika_email"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <View
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/ukuran_10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/pink" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aplikasi_ini_didesain"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="bold"/>

            <TextView
                android:layout_marginTop="@dimen/ukuran_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ghifar1"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ghifari2"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ghifari3"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="normal"/>

            <View
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/ukuran_10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/pink" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:textSize="@dimen/standard_text_size"
                android:gravity="center"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/graph"
                    android:textSize="@dimen/standard_text_size"
                    android:gravity="center"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_graph"
                    android:textSize="@dimen/ukuran15sp"
                    android:gravity="center"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bluetot"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginTop="@dimen/margin_top0"
                    android:gravity="center"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_bluetooth2"
                    android:textSize="@dimen/ukuran15sp"
                    android:gravity="center"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/news"
                    android:textSize="@dimen/standard_text_size"
                    android:layout_marginTop="@dimen/margin_top0"
                    android:gravity="center"
                    android:textStyle="normal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credit_news"
                    android:textSize="@dimen/ukuran15sp"
                    android:gravity="center"
                    android:textStyle="normal"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>