<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ika.kof.MainActivity">

    <TextView
        android:id="@+id/blute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listbluetooth"
        android:textStyle="bold"
        android:textSize="@dimen/tittle_text_size"/>

    <LinearLayout
        android:id="@+id/linearlayoutbluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/blute">

        <TextView
            android:id="@+id/blute_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_search"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relatif_layout_blute"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/linearlayoutbluetooth"
        android:layout_above="@+id/mLlayoutBottomButtons" >

        <ListView
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/listView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mLlayoutBottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSearch"
            android:layout_below="@id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:background="@color/bluesky1"/>

    </LinearLayout>


</RelativeLayout>
